fixed app icon and added public dir

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "main": "dist/main/index.cjs",
   "scripts": {
     "dev": "node scripts/watch.mjs",
+    "dist": "node scripts/build.mjs",
     "build:win": "node scripts/build.mjs && electron-builder"
   },
   "devDependencies": {
