--- a/package.json
+++ b/package.json
@@ -20,16 +20,17 @@
     "build:win": "node .vite/build.mjs && electron-builder"
   },
   "devDependencies": {
-    "@types/react": "^17.0.33",
-    "@types/react-dom": "^17.0.10",
-    "@vitejs/plugin-react": "^1.0.7",
-    "electron": "^15.3.0",
-    "electron-builder": "^22.13.1",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "@vitejs/plugin-react": "^1.1.3",
+    "electron": "^16.0.5",
+    "electron-builder": "^22.14.5",
     "electron-is-dev": "^2.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "typescript": "^4.4.4",
-    "vite": "^2.6.13"
+    "sass": "^1.45.2",
+    "typescript": "^4.5.4",
+    "vite": "^2.7.10"
   },
   "env": {
     "//": "Used in ./.vite/watch.mjs and ./src/main/index.ts",
