--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "PORT": 3344
   },
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.2.6"
   }
 }
