--- a/package.json
+++ b/package.json
@@ -22,15 +22,15 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "@mui/material": "^5.2.6",
+    "@mui/material": "^5.2.7",
     "@mui/styles": "^5.2.3",
-    "react-zoom-pan-pinch": "^2.1.3"
+    "panzoom": "^9.4.2"
   },
   "devDependencies": {
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@vitejs/plugin-react": "^1.1.3",
-    "electron": "^16.0.5",
+    "electron": "^16.0.6",
     "electron-builder": "^22.14.5",
     "electron-is-dev": "^2.0.0",
     "react": "^17.0.2",
