--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.2.7",
-    "@mui/styles": "^5.2.3",
-    "panzoom": "^9.4.2"
+    "@mui/styles": "^5.2.3"
   },
   "devDependencies": {
     "@types/react": "^17.0.38",
