--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "main": "dist/main/index.cjs",
   "scripts": {
     "dev": "node .vite/watch.mjs",
-    "dist": "node .vite/build.mjs",
+    "build:web": "node .vite/build.mjs",
     "build:win": "node .vite/build.mjs && electron-builder"
   },
   "dependencies": {
@@ -32,6 +32,7 @@
     "electron": "^16.0.6",
     "electron-builder": "^22.14.5",
     "electron-is-dev": "^2.0.0",
+    "json-schema-to-typescript": "^10.1.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "typescript": "^4.5.4",
