--- a/package.json
+++ b/package.json
@@ -28,13 +28,15 @@
   "devDependencies": {
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
-    "@vitejs/plugin-react": "^1.1.3",
+    "@vitejs/plugin-react": "^1.1.4",
+    "bezier-js": "^5.1.0",
     "electron": "^16.0.6",
     "electron-builder": "^22.14.5",
     "electron-is-dev": "^2.0.0",
     "json-schema-to-typescript": "^10.1.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draggable": "^4.4.4",
     "typescript": "^4.5.4",
     "vite": "^2.7.10"
   },
