--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@mui/styles": "^5.2.3"
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^1.7.1",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "@types/react-redux": "^7.1.21",
     "@vitejs/plugin-react": "^1.1.4",
     "bezier-js": "^5.1.0",
     "electron": "^16.0.6",
@@ -37,6 +39,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.4",
+    "react-redux": "^7.2.6",
     "typescript": "^4.5.4",
     "vite": "^2.7.10"
   },
