--- a/package.json
+++ b/package.json
@@ -22,18 +22,20 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "@mui/icons-material": "^5.2.5",
-    "@mui/material": "^5.2.7",
-    "@mui/styles": "^5.2.3"
+    "@mui/icons-material": "^5.3.1",
+    "@mui/material": "^5.3.1",
+    "@mui/styles": "^5.3.0",
+    "@types/ws": "^8.2.2",
+    "ws": "^8.4.2"
   },
   "devDependencies": {
     "@reduxjs/toolkit": "^1.7.1",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
-    "@types/react-redux": "^7.1.21",
+    "@types/react-redux": "^7.1.22",
     "@vitejs/plugin-react": "^1.1.4",
     "bezier-js": "^5.1.0",
-    "electron": "^16.0.6",
+    "electron": "^16.0.7",
     "electron-builder": "^22.14.5",
     "electron-is-dev": "^2.0.0",
     "json-schema-to-typescript": "^10.1.5",
@@ -41,8 +43,8 @@
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.4",
     "react-redux": "^7.2.6",
-    "typescript": "^4.5.4",
-    "vite": "^2.7.10"
+    "typescript": "^4.5.5",
+    "vite": "^2.7.13"
   },
   "env": {
     "//": "Used in ./.vite/watch.mjs and ./src/main/index.ts",
