--- a/package.json
+++ b/package.json
@@ -20,35 +20,40 @@
     "build:win": "node .vite/build.mjs && electron-builder"
   },
   "dependencies": {
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.3.1",
-    "@mui/material": "^5.3.1",
+    "@mui/material": "^5.6.2",
     "@mui/styles": "^5.3.0",
-    "@types/ws": "^8.2.2",
-    "ws": "^8.4.2"
+    "@types/ws": "^8.5.3",
+    "socket.io": "^4.4.1",
+    "ws": "^8.5.0"
   },
   "devDependencies": {
-    "@reduxjs/toolkit": "^1.7.1",
+    "@reduxjs/toolkit": "^1.8.1",
     "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
-    "@types/react-redux": "^7.1.22",
-    "@vitejs/plugin-react": "^1.1.4",
-    "bezier-js": "^5.1.0",
-    "electron": "^16.0.7",
-    "electron-builder": "^22.14.5",
+    "@types/react-dom": "^18.0.2",
+    "@types/react-redux": "^7.1.24",
+    "@vitejs/plugin-react": "^1.3.1",
+    "bezier-js": "^6.1.0",
+    "electron": "^18.1.0",
+    "electron-builder": "^23.0.3",
     "electron-is-dev": "^2.0.0",
     "json-schema-to-typescript": "^10.1.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.4",
-    "react-redux": "^7.2.6",
-    "typescript": "^4.5.5",
-    "vite": "^2.7.13"
+    "react-redux": "^8.0.1",
+    "typescript": "^4.6.3",
+    "vite": "^2.9.5"
   },
   "env": {
     "//": "Used in ./.vite/watch.mjs and ./src/main/index.ts",
     "HOST": "127.0.0.1",
     "PORT": 3344
+  },
+  "optionalDependencies": {
+    "bufferutil": "^4.0.6",
+    "utf-8-validate": "^5.0.9"
   }
 }
