--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@mui/icons-material": "^5.3.1",
     "@mui/material": "^5.6.2",
     "@mui/styles": "^5.3.0",
+    "@types/express": "^4.17.13",
     "@types/ws": "^8.5.3",
+    "express": "^4.17.3",
     "socket.io": "^4.4.1",
     "ws": "^8.5.0"
   },
