--- a/package.json
+++ b/package.json
@@ -24,15 +24,11 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.3.1",
     "@mui/material": "^5.6.2",
-    "@mui/styles": "^5.3.0",
-    "@types/express": "^4.17.13",
-    "@types/ws": "^8.5.3",
-    "express": "^4.17.3",
-    "socket.io": "^4.4.1",
-    "ws": "^8.5.0"
+    "@mui/styles": "^5.3.0"
   },
   "devDependencies": {
     "@reduxjs/toolkit": "^1.8.1",
+    "@types/express": "^4.17.13",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^18.0.2",
     "@types/react-redux": "^7.1.24",
@@ -40,11 +36,13 @@
     "electron": "^18.1.0",
     "electron-builder": "^23.0.3",
     "electron-is-dev": "^2.0.0",
+    "express": "^4.17.3",
     "json-schema-to-typescript": "^10.1.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.4",
     "react-redux": "^8.0.1",
+    "socket.io": "^4.4.1",
     "typescript": "^4.6.3",
     "vite": "^2.9.5"
   },
