--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,8 @@ mysql-connector-python = "==8.0.22"
 keyring = ">=21.4.0"
 pandas = ">=1.1.2"
 networkx = ">=2.6.2"
+requests = "*"
+websocket-client = "*"
 
 [dev-packages]
 autopep8 = "*"
