--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@mantine/core": "^4.2.5",
+    "@mantine/hooks": "^4.2.5",
     "@mui/icons-material": "^5.3.1",
     "@mui/material": "^5.6.2",
     "@mui/styles": "^5.3.0"
