--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@mantine/hooks": "^4.2.5",
     "@mui/icons-material": "^5.3.1",
     "@mui/material": "^5.6.2",
-    "@mui/styles": "^5.3.0"
+    "@mui/styles": "^5.3.0",
+    "@tabler/icons": "^1.68.0"
   },
   "devDependencies": {
     "@reduxjs/toolkit": "^1.8.1",
