--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.4",
     "react-redux": "^8.0.1",
+    "sass": "^1.52.3",
     "socket.io": "^4.4.1",
     "typescript": "^4.6.3",
     "vite": "^2.9.5"
