improved prebuild script to generate types

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "scripts": {
     "dev": "node .vite/watch.mjs",
     "build:web": "node .vite/build.mjs",
-    "build:win": "node .vite/build.mjs && electron-builder"
+    "build:win": "node .vite/build.mjs && electron-builder",
+    "prebuild": "node .vite/prebuild.mjs"
   },
   "dependencies": {
     "@mantine/core": "^4.2.12",
