--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "url": "git+https://github.com/bischoff-m/nodecode.git"
   },
   "engines": {
-    "node": ">=17.0.0",
+    "node": ">=18.0.0",
     "npm": ">=8.0.0"
   },
   "main": "dist/main/index.cjs",
@@ -38,6 +38,7 @@
     "electron-is-dev": "^2.0.0",
     "express": "^4.18.1",
     "json-schema-to-typescript": "^11.0.1",
+    "nanoid": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
