--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/react-dom": "^18.0.6",
     "@types/react-redux": "^7.1.24",
     "@vitejs/plugin-react": "^2.0.0",
+    "ajv": "^6.12.6",
     "electron": "^19.0.8",
     "electron-builder": "^23.1.0",
     "electron-is-dev": "^2.0.0",
