--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@reduxjs/toolkit": "^1.8.3",
     "@types/express": "^4.17.13",
+    "@types/json-schema": "^7.0.11",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@types/react-redux": "^7.1.24",
