--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-redux": "^8.0.2",
     "sass": "^1.53.0",
     "socket.io": "^4.5.1",
+    "typedoc": "^0.23.15",
     "typescript": "^4.7.4",
     "vite": "^3.0.2"
   },
