--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
         "npm": ">=8.0.0"
     },
     "scripts": {
-        "dev": "cd packages/nodecode-ui/ && node .vite/watch.mjs",
-        "build:web": "node packages/nodecode-ui/.vite/build.mjs",
-        "build:win": "node packages/nodecode-ui/.vite/build.mjs && electron-builder",
-        "prebuild": "node packages/nodecode-ui/.vite/prebuild.mjs",
-        "docs": "npx serve packages/nodecode-ui/docs"
+        "start": "npm start --prefix packages/nodecode-ui/",
+        "prebuild": "npm prebuild --prefix packages/nodecode-ui/",
+        "build": "npm build --prefix packages/nodecode-ui/",
+        "docs:ui-only": "npm run docs --prefix packages/nodecode-ui/",
+        "docs": "npm start --prefix packages/nodecode-docs/",
+        "postinstall": "cd packages/nodecode-runtime && pipenv install",
+        "backend": "cd packages/nodecode-runtime && pipenv run python kernel_prototype.py"
     },
     "workspaces": [
         "packages/nodecode-ui",
