--- a/packages/nodecode-ui/package.json
+++ b/packages/nodecode-ui/package.json
@@ -6,10 +6,9 @@
   "author": "Marco Bischoff <bischoff_m@aim.com>",
   "main": "dist/main/index.cjs",
   "scripts": {
-    "dev": "node .vite/watch.mjs",
-    "build:web": "node .vite/build.mjs",
-    "build:win": "node .vite/build.mjs && electron-builder",
-    "prebuild": "node .vite/prebuild.mjs",
+    "start": "node .vite/watch.mjs",
+    "build": "node .vite/build.mjs && electron-builder",
+    "prebuild": "node .vite/prebuild-types.mjs && node .vite/prebuild-docs.mjs",
     "docs": "npx serve docs"
   },
   "dependencies": {
@@ -27,7 +26,7 @@
     "@types/react-redux": "^7.1.24",
     "@vitejs/plugin-react": "^2.0.0",
     "ajv": "^6.12.6",
-    "electron": "^19.0.8",
+    "electron": "19.0.8",
     "electron-builder": "^23.1.0",
     "electron-is-dev": "^2.0.0",
     "express": "^4.18.1",
