--- a/packages/nodecode-ui/package.json
+++ b/packages/nodecode-ui/package.json
@@ -7,9 +7,8 @@
   "main": "dist/main/index.cjs",
   "scripts": {
     "start": "node .vite/watch.mjs",
-    "build": "node .vite/build.mjs && electron-builder",
     "prebuild": "node .vite/prebuild-types.mjs && node .vite/prebuild-docs.mjs",
-    "docs": "npx serve docs"
+    "build": "node .vite/build.mjs && electron-builder"
   },
   "dependencies": {
     "@mantine/core": "^4.2.12",
@@ -38,7 +37,6 @@
     "react-redux": "^8.0.2",
     "sass": "^1.53.0",
     "socket.io": "^4.5.1",
-    "typedoc": "^0.23.15",
     "typescript": "^4.7.4",
     "vite": "^3.0.2"
   },
