--- a/packages/nodecode-docs/package.json
+++ b/packages/nodecode-docs/package.json
@@ -5,8 +5,8 @@
   "author": "Marco Bischoff <bischoff_m@aim.com>",
   "scripts": {
     "docusaurus": "docusaurus",
-    "start": "docusaurus start",
-    "build": "docusaurus build",
+    "start": "cross-env NODE_ENV=development docusaurus start",
+    "build": "cross-env NODE_ENV=production docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.1.0",
     "@tsconfig/docusaurus": "^1.0.5",
+    "cross-env": "^7.0.3",
     "docusaurus-plugin-typedoc": "^0.17.5",
     "typedoc": "^0.23.15",
     "typedoc-plugin-markdown": "^3.13.6",
