--- a/package.json
+++ b/package.json
@@ -24,5 +24,11 @@
     "workspaces": [
         "packages/nodecode-ui",
         "packages/nodecode-docs"
-    ]
+    ],
+    "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^5.39.0",
+        "@typescript-eslint/parser": "^5.39.0",
+        "eslint": "^8.25.0",
+        "eslint-plugin-react": "^7.31.8"
+    }
 }
