--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     },
     "scripts": {
         "start": "npm start --prefix packages/nodecode-ui/",
-        "ui:prebuild": "npm prebuild --prefix packages/nodecode-ui/",
-        "ui:build": "npm build --prefix packages/nodecode-ui/",
+        "ui:prebuild": "npm run prebuild --prefix packages/nodecode-ui/",
+        "ui:build": "npm run build --prefix packages/nodecode-ui/",
         "docs": "npm start --prefix packages/nodecode-docs/",
         "docs:build": "npm run build --prefix packages/nodecode-docs/",
         "docs:serve": "npm run serve --prefix packages/nodecode-docs/",
         "runtime": "cd packages/nodecode-runtime && pipenv run python kernel_prototype.py",
-        "runtime:postinstall": "cd packages/nodecode-runtime && pipenv install"
+        "runtime:postinstall": "cd packages/nodecode-runtime && pipenv install",
+        "lint": "eslint ."
     },
     "workspaces": [
         "packages/nodecode-ui",
@@ -29,6 +30,13 @@
         "@typescript-eslint/eslint-plugin": "^5.39.0",
         "@typescript-eslint/parser": "^5.39.0",
         "eslint": "^8.25.0",
-        "eslint-plugin-react": "^7.31.8"
+        "eslint-import-resolver-typescript": "^3.5.1",
+        "eslint-plugin-css": "^0.6.0",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-import-helpers": "^1.2.1",
+        "eslint-plugin-mdx": "^2.0.5",
+        "eslint-plugin-react": "^7.31.8",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "typescript": "^4.8.4"
     }
 }
