--- a/package.json
+++ b/package.json
@@ -34,10 +34,10 @@
         "eslint-plugin-css": "^0.6.0",
         "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-import-helpers": "^1.2.1",
-        "eslint-plugin-jsdoc": "^39.3.6",
         "eslint-plugin-mdx": "^2.0.5",
         "eslint-plugin-react": "^7.31.8",
         "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-tsdoc": "^0.2.17",
         "typescript": "^4.8.4"
     }
 }
