--- a/packages/nodecode-docs/package.json
+++ b/packages/nodecode-docs/package.json
@@ -31,6 +31,7 @@
     "docusaurus-plugin-typedoc": "^0.17.5",
     "typedoc": "^0.23.15",
     "typedoc-plugin-markdown": "^3.13.6",
+    "typedoc-plugin-not-exported": "^0.1.6",
     "typescript": "^4.7.4"
   },
   "browserslist": {
