--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
         "eslint-plugin-mdx": "^2.0.5",
         "eslint-plugin-react": "^7.31.8",
         "eslint-plugin-react-hooks": "^4.6.0",
-        "eslint-plugin-tsdoc": "^0.2.17",
+        "typedoc-plugin-mark-react-functional-components": "^0.2.2",
+        "typedoc-plugin-rename-defaults": "^0.6.4",
         "typescript": "^4.8.4"
     }
 }
