--- a/packages/nodecode-docs/package.json
+++ b/packages/nodecode-docs/package.json
@@ -30,8 +30,10 @@
     "cross-env": "^7.0.3",
     "docusaurus-plugin-typedoc": "^0.17.5",
     "typedoc": "^0.23.15",
+    "typedoc-plugin-external-module-map": "^1.3.2",
     "typedoc-plugin-mark-react-functional-components": "^0.2.2",
     "typedoc-plugin-markdown": "^3.13.6",
+    "typedoc-plugin-mdn-links": "^2.0.0",
     "typedoc-plugin-not-exported": "^0.1.6",
     "typedoc-plugin-rename-defaults": "^0.6.4",
     "typescript": "^4.7.4"
