--- a/packages/nodecode-docs/package.json
+++ b/packages/nodecode-docs/package.json
@@ -5,6 +5,7 @@
   "author": "Marco Bischoff <bischoff_m@aim.com>",
   "scripts": {
     "docusaurus": "docusaurus",
+    "prestart": "rimraf docs/internal-reference/",
     "start": "cross-env NODE_ENV=development docusaurus start",
     "build": "cross-env NODE_ENV=production docusaurus build",
     "swizzle": "docusaurus swizzle",
